Fix #18 - Remove focus on mobile menu

--- a/app/assets/stylesheets/components/_menus.scss
+++ b/app/assets/stylesheets/components/_menus.scss
@@ -29,4 +29,10 @@
       width: 24rem;
     }
   }
+
+  .navbar-toggler {
+    &:focus {
+      outline: none;
+    }
+  }
 }
